--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Nasoro Suddi</title>
-</head>
-<body>
+<html lang="en">
+    
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>
+            Nasoro Suddi
+        </title>
+        <link rel="stylesheet" href="./assets/all.min.css">
+        <link rel="stylesheet" href="./assets/style.css">
+    </head>
+    
+    <body>
+        <div class="card-container"> 
+            <img src="./assets/nassor.jpg" alt="user">
+            <h3>
+                Nasoro Suddi
+            </h3>
+            <h6>
+                D_IT-30959
+            </h6>
+            <p>
+                A Student At Iringa University...
+              </p> 
+              <p>
+                Owner Of 
+            </p>
+            <div class="buttons"> 
+             <button class="primary">
+                <a href = "http://resultshub.tk" target = "_blank" class="btn primary">
+                    Results Hub
+                </a> 
+                   </button>
+                <button class="primary ghost">
+                    Open Tech
+                </button>
+            </div>
+            <div class="skills">
+                <h6 class="left">
+                    Skills
+                </h6>
+                <ul>
+                    <li>
+                        CCTV Installation
+                    </li>
+                    <li>
+                        Motor Gate Installation
+                    </li>
+                    <li>
+                        Electronics Repairation
+                    </li>
+                    <li>
+                        Camera Man
+                    </li> 
+                    <li>
+                        PHP 20% 
+                    </li> 
+                    <li>
+                        JavaScript 10% 
+                    </li>
+                    <li>
+                        CSS 5%
+                    </li> 
+                </ul>
+            </div>
+        </div>
+    </body>
 
-</body>
 </html>
